# Photoshop_Casero

./: .gitignore  BintoImage  CMakeCache.txt  CMakeLists.txt  FileSender.cpp  ImageConversion.h  ImageProcessing.cpp  ImageProcessing.h  ImageToBin  ImageToBin.cpp  Makefile  Photoshop_Casero  Photoshop_Casero.cbp  README.md  client  client.cpp  cmake_install.cmake  main.cpp  server  server.cpp  unitTesting.cpp
.cmake/api/v1/reply/: cache-v2-22d84ebc7f62791cb4a1.json  cmakeFiles-v1-06064cc17f2e44ea3bf3.json  codemodel-v2-33c1ca28538f2d8f2a7f.json  index-2022-10-01T16-22-59-0886.json  target-Photoshop_Casero-Debug-145ea0546d9bf6369757.json
ImageConversion/: BinToImage.cpp  ImageToBin.cpp  bin_image_data.txt
ImageConversion/BinToImage/: BinToImage.cpp
ImageConversion/ImageToBin/: ImageToBin  ImageToBin.cpp  bin_image_data.txt
